# dida-clone

./: AGENTS.md  ARCHITECTURE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  package-lock.json  package.json
.agent/rules/: Tauri跨平台开发助手.md
.cursor/skills/tauri2-react-rust/: SKILL.md
.github/workflows/: release.yml
.trae/rules/: tauri2-react-rust.md
.trae/skills/agent-browser/: SKILL.md
.trae/skills/brainstorming/: SKILL.md
.trae/skills/tauri-architecture/: SKILL.md
.trae/skills/tauri2-react-rust/: SKILL.md
src/: AGENTS.md  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: AGENTS.md  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: list.rs  mod.rs  tag.rs  task.rs
src-tauri/src/db/: AGENTS.md  connection.rs  list_repo.rs  mod.rs  tag_repo.rs  task_repo.rs
src-tauri/src/models/: list.rs  mod.rs  tag.rs  task.rs
src/components/: AGENTS.md
src/components/Common/: AlertDialog.tsx  ContextMenu.tsx  DatePicker.tsx  Toast.tsx
src/components/Layout/: Header.tsx  MainLayout.tsx  NavRail.tsx  Sidebar.tsx
src/components/Tag/: AddTagModal.tsx  TagContextMenu.tsx
src/components/Task/: AGENTS.md  ReminderManager.tsx  ReminderModal.tsx  SubtaskItem.tsx  (+5 more)
src/constants/: colors.ts  reminders.ts  repeats.ts  smartLists.ts
src/hooks/: useClickOutside.ts  useLists.ts  useShortcuts.ts  useTags.ts  useTasks.ts
src/services/: list.ts  tag.ts  task.ts
src/store/: useAlertStore.ts  useAppStore.ts
src/types/: index.ts  list.ts  tag.ts  task.ts
src/utils/: date.ts  priority.ts  taskGrouping.ts
